--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 # Please refer https://aka.ms/HTTPSinContainer on how to setup an https developer certificate for your ASP .NET Core service.
 
-version: '3.4'
+version: "3.4"
 
 #create a volume for the my sql container.To ensure Data persists after my sql container is stopped
 volumes:
-  datafiles:
+  events_mssql:
 
 services:
   restApi:
@@ -17,21 +17,47 @@ services:
     build:
       context: .
       dockerfile: src/RestApi/Dockerfile
-    
+
     ## this line is settings development env
     # environment:
-      # - ASPNETCORE_ENVIRONMENT=Development
+    # - ASPNETCORE_ENVIRONMENT=Development
+
+  # mssql:
+  #   image: mcr.microsoft.com/mssql/server:2019-GDR1-ubuntu-16.04
+  #   # image: mcr.microsoft.com/azure-sql-edge:latest
+  #   container_name: mssql2019
+  #   ports:
+  #     - "1433:1433"
+  #   volumes:
+  #     - events_mssql:/var/opt/mssql
+  #   # volumes:
+  #   #   - ~/apps/mssql/data:/var/lib/mssqlql/data
+  #   environment:
+  #     ACCEPT_EULA: Y
+  #     SA_PASSWORD: 2astazeY
+      # MSSQL_DB: dev
+      # MSSQL_USER: User
+      # MSSQL_PASSWORD: Passwo!rd123!
 
   mssql:
-    image: mcr.microsoft.com/mssql/server:2019-latest
+    # platform: linux/amd64
+    # image: mcr.microsoft.com/mssql/server
+    image: mcr.microsoft.com/azure-sql-edge:latest
+    container_name: mssql
+    volumes:
+      - events_mssql:/var/opt/mssql
+      - ./setup.sql:/usr/config/setup.sql
     ports:
       - 1433:1433
-    volumes:
-      - ~/apps/mssql/data:/var/lib/mssqlql/data
     environment:
-      - ACCEPT_EULA=newuser
-      - SA_PASSWORD=Passwo!rd123!
-    
+      - ACCEPT_EULA=Y
+      - MSSQL_SA_PASSWORD=Passw@rd
+      - MSSQL_PID=Developer
+      - MSSQL_DB=events_service
+      - MSSQL_USER=SA
+      - MSSQL_PASSWORD=Passw@rd
+      - MSSQL_DB_AUDIT_LOG=events_service_audit_log
+
   redis:
     restart: always
     container_name: redis
@@ -40,4 +66,3 @@ services:
       - 6379:6379
     volumes:
       - /data/redis-data:/data
-
