feat:add mssql connect string

--- a/src/RestApi/appsettings.Production.json
+++ b/src/RestApi/appsettings.Production.json
@@ -8,7 +8,7 @@
   },
   "AppSettings": {
     "ConnectionStrings": {
-      "DefaultConnection": "Server=172.17.0.1; Port=3306;User Id=newuser;Password=Passwo!rd123!;Database=Furniture"
+      "DefaultConnection": "Server=172.17.0.1,1433;Database=master;MultipleActiveResultSets=true;User=SA;Password=Passw@rd;"
     },
     "RedisSettings": {
       "BasicRedisSetting": {
