--- a/src/RestApi/appsettings.Production.json
+++ b/src/RestApi/appsettings.Production.json
@@ -8,7 +8,7 @@
   },
   "AppSettings": {
     "ConnectionStrings": {
-      "DefaultConnection": "Server=172.17.0.1,1433;Database=master;MultipleActiveResultSets=true;User=SA;Password=Passw@rd;"
+      "DefaultConnection": "Server=172.17.0.1,1433;Database=events_service;MultipleActiveResultSets=true;User=SA;Password=Passw@rd;"
     },
     "RedisSettings": {
       "BasicRedisSetting": {
