--- a/src/ScheduleJob/ScheduleJob.csproj
+++ b/src/ScheduleJob/ScheduleJob.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="App.Metrics.Extensions.Hosting" Version="4.3.0-preview.0.30" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0-preview.7.21377.19" />
