--- a/src/ScheduleJob/ScheduleJob.csproj
+++ b/src/ScheduleJob/ScheduleJob.csproj
@@ -19,5 +19,9 @@
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.2.4" />
     <PackageReference Include="System.Net.Requests" Version="4.3.0" />
 
+    <ProjectReference Include="..\Services\Services.csproj" />
+    <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\Repositories\Repositories.csproj" />
+    <ProjectReference Include="..\Helpers\Helpers.csproj" />
   </ItemGroup>
 </Project>
