--- a/src/ScheduleJob/appsettings.Production.json
+++ b/src/ScheduleJob/appsettings.Production.json
@@ -8,11 +8,11 @@
   },
   "AppSettings": {
     "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost,1433;Database=events_service;MultipleActiveResultSets=true;User=SA;Password=Passw@rd;"
+      "DefaultConnection": "Server=172.17.0.1,1433;Database=events_service;MultipleActiveResultSets=true;User=SA;Password=Passw@rd;"
     },
     "RedisSettings": {
       "BasicRedisSetting": {
-        "DefaultConnection": "localhost",
+        "DefaultConnection": "172.17.0.1",
         "Port": 6379
       }
     },
